auth/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pr-auth-svc
  namespace: default
spec:
  selector: { app: pr-auth }
  ports:
  - { port: 8080, targetPort: 8080 }
